# HPC_ReverseAugmentedConstrained

./: .gitignore  Chronos  ExternalLib  LICENSE  README.md
Benchmarks/TestLagrange/: .gitignore  RUN  config.xml  driver_Lagrange
Binary/: Chronos  LexActivator  curlpp  jwt-cpp  lapack  parmetis  pugixml  rm_binary  run_cmake  run_make
Drivers/Driver_Lagrange/: CMakeLists.txt
Drivers/Driver_Lagrange/FindPACK/: FindCHRONOS.cmake  FindCUB.cmake  FindCURLPP.cmake  FindJWT.cmake  FindLEXACTIVATOR.cmake  FindMETIS.cmake  FindPUGIXML.cmake  FindUSERLAPACK.cmake
Drivers/Driver_Lagrange/src/Core/: CMakeLists.txt  driver.cpp
Drivers/Driver_Lagrange/src/Matrix/: CMakeLists.txt  SPMat.cpp
Drivers/Driver_Lagrange/src/Matrix/include/: SadPointMat.h
Drivers/Driver_Lagrange/src/ReverseAugmented/: CMakeLists.txt  ReverseAugmented.cpp  cpt_D_coef_loc.cpp
Drivers/Driver_Lagrange/src/ReverseAugmented/include/: IDMat.h  RevAugm.h  RevAugm_default_params.h  RevAugm_params.h  cpt_D_coef_loc.h  inl_blas1.h
Drivers/Driver_Lagrange/src/Utils/: CMakeLists.txt  check_XML.cpp  get_solver_kind.cpp  read_fnames.cpp  read_general_parms.cpp  set_prec_parms.cpp  set_solver_parms.cpp  utilities.cpp
Drivers/Driver_Lagrange/src/Utils/include/: check_XML.h  get_solver_kind.h  read_fnames.h  read_general_parms.h  set_prec_parms.h  set_solver_parms.h  utilities.hpp
